--- a/VpnSelectorLib/VpnSelectorLib.csproj
+++ b/VpnSelectorLib/VpnSelectorLib.csproj
@@ -34,8 +34,32 @@
       <HintPath>..\..\packages\DotRas.for.Win7.1.3.0\lib\net40\DotRas.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FrwSoftware.FrwSimpleJsonORM, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FrwSoftware.FrwSimpleJsonORM.1.3.0\lib\net452\FrwSoftware.FrwSimpleJsonORM.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FrwSoftware.FrwSimpleWinCRUD, Version=1.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FrwSoftware.FrwSimpleWinCRUD.1.3.0\lib\net452\FrwSoftware.FrwSimpleWinCRUD.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="HtmlAgilityPack, Version=1.8.5.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\HtmlAgilityPack.1.8.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAPICodePack-Core.1.1.0.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack.Shell, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAPICodePack-Shell.1.1.0.0\lib\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.WindowsAPICodePack.ShellExtensions, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.WindowsAPICodePack-Shell.1.1.0.0\lib\Microsoft.WindowsAPICodePack.ShellExtensions.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
@@ -95,16 +119,6 @@
     </Compile>
     <Compile Include="VPN\NetConnUtils.cs" />
     <Compile Include="VPN\VpngateImporter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\SimpleWinCRUD\FrwSimpleJsonORM\FrwSimpleJsonORM.csproj">
-      <Project>{0a396f66-2b49-4fc6-80e3-2158b9bcc481}</Project>
-      <Name>FrwSimpleJsonORM</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\SimpleWinCRUD\FrwSimpleWinCRUD\FrwSimpleWinCRUD.csproj">
-      <Project>{dde15dde-672e-4dd2-9336-0bfb6ba02b89}</Project>
-      <Name>FrwSimpleWinCRUD</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="BaseVpnSelectorAppForm.resx">
