--- a/VpnSelectorLib/packages.config
+++ b/VpnSelectorLib/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="DockPanelSuite" version="3.0.4" targetFramework="net452" />
   <package id="DotRas.for.Win7" version="1.3.0" targetFramework="net452" />
+  <package id="FrwSoftware.FrwSimpleJsonORM" version="1.3.0" targetFramework="net452" />
+  <package id="FrwSoftware.FrwSimpleWinCRUD" version="1.3.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.8.5" targetFramework="net452" />
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net452" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net452" />
   <package id="ObjectListView.Official" version="2.9.2-alpha2" targetFramework="net452" />
 </packages>
